fixes of scroll and align

--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,6 @@ a, a:focus, a:hover {
     text-decoration: none;
 }
 
-html, body {
-    height: 100%;
-}
-
 body {
     text-align: center;
     margin-top: 50px;
@@ -47,7 +43,6 @@ body {
 }
 
 @media (min-width: 768px) {
-
     .cover-container {
         width: 100%;
     }
